--- a/get-in-line/package.json
+++ b/get-in-line/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.8.3",
+    "firebaseui": "^6.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
