--- a/get-in-line/package.json
+++ b/get-in-line/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "firebase": "^9.8.3",
     "firebaseui": "^6.0.1",
     "qrcode": "^1.5.0",
@@ -16,6 +18,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
+    "twilio": "^3.79.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
